--- a/gh_MP.ipynb
+++ b/gh_MP.ipynb
@@ -51,7 +51,8 @@
     "        T_max: upbound of observation/spreading time considered\n",
     "        num_T_positions: used for decides T_positions=[i for i in range(1, num_T_positions+1)], and the optimization will search over observation time [T_max*t_pos/num_T_positions for t_pos in T_positions]\n",
     "    Returns:\n",
-    "        \n",
+    "        Output the the set of the nodes that has the largest likelihood to be the source, one of which the index of the optimal ovservation time in T_positions is also provided.  \n",
+    "        An ipywidgets is provided to show the change of most likely source against the time indexed by T_positions.\n",
     "    \n",
     "    \"\"\"\n",
     "       \n",
