--- a/gh_MP.ipynb
+++ b/gh_MP.ipynb
@@ -76,7 +76,7 @@
     "    \n",
     "    #### Construct the parent and child relation between nodes after selecting a node as source\n",
     "    \n",
-    "    source=0\n",
+    "    source=list(nodes_infected)[0]\n",
     "    parent={} # 'key:value' pair where 'value' is the parent node for node 'key'\n",
     "    child={} #'key:value' pair where 'value' is the set of child nodes for node 'key'\n",
     "    depth={} # \n",
